# drivers-orogen-camera_prophesee

./: .gitignore  CMakeLists.txt  camera_prophesee.orogen  camera_propheseeTypes.hpp  manifest.xml
config/: book_duck_cylinder.bias  camera_prophesee::FrameGenerator.yml  camera_prophesee::Task.yml
scripts/: frame_log.rb  run.rb
tasks/: CMakeLists.txt  FrameGenerator.cpp  FrameGenerator.hpp  Task.cpp  Task.hpp
